optimize get API
